src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400,500,600&display=swap");
@import "tailwindcss";
@plugin "tailwind-scrollbar";

/* @theme {
  --font-*: initial;
  --font-sans: "Inter", "serif";
} */

.headline-1 {
  @apply max-w-max;
  background: -webkit-linear-gradient(0deg, #fafafa, #aaaaaa);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.headline-1 {
  @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15];
}

.material-symbols-rounded {
  @apply w-[1em] h-[1em] overflow-hidden;
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
}

.container {
  @apply px-4 mx-auto lg:px-0 xl:max-w-6xl;
}

.img-box {
  @apply bg-zinc-700 overflow-hidden;
}

.img-cover {
  @apply w-full h-full object-cover;
}

html {
  scroll-behavior: smooth;
}

body {
  @apply bg-zinc-900 text-zinc-50;
}

.menu-btn {
  @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15  active:scale-95 cursor-pointer md:hidden;
}

.navbar {
  @apply absolute top-full mt-2 right-0 min-w-40 
  p-2 bg-zinc-50/10 rounded-2xl ring-inset right-1 
  ring-zinc-50/50 scale-90 isolate blur-sm opacity-0 
  invisible md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-none md:visible md:scale-100 backdrop-blur-2xl;
}

.navbar.active {
  @apply opacity-100 scale-100 blur-none visible;
}

.nav-link {
  @apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-zinc-50 transition-colors;
}

.nav-link.active {
  @apply text-zinc-900 duration-500;
}

.navbar .active-box {
  @apply absolute bg-zinc-50 rounded-lg -z-10 duration-500;
}

.btn {
  @apply max-w-max h-9 md:flex items-center max-md:hidden gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color];
}

.btn-secondary {
  @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80;
}

.btn .material-symbols-rounded {
  @apply text-[18px];
}

.btn:has(.material-symbols-rounded) {
  @apply pr-3;
}

.btn-primary {
  @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400 cursor-pointer;
}

.btn-outline {
  @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800;
}

.section {
  @apply pt-20 lg:pt-32;
}

